# AI-helper-back

./: Cargo.toml  docker-compose.yml  init.sql  readme.md
src/: app_state.rs  lib.rs  main.rs  router.rs
src/database/: actions.rs  mod.rs  options.rs  prelude.rs  users.rs
src/features/: mod.rs
src/features/actions/dtos/: create_action.rs  delete_action.rs  get_my_actions.rs  mod.rs
src/features/actions/queries/: create_action.rs  delete_action.rs  find_action_by_id.rs  get_my_actions.rs  mod.rs
src/features/actions/routes/: create_action.rs  delete_action.rs  get_my_actions.rs  mod.rs
src/features/users/: mod.rs
src/features/users/dtos/: sign_up.rs
src/features/users/queries/: create_user.rs
src/features/users/routes/: sign_up.rs
src/middleware/: require_authentication.rs
src/utils/: app_error.rs
