[package]
name = "ai-helper-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.2.0"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.16.0", features = ["derive"] }
